--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,44 +14,37 @@ jobs:
     strategy:
       matrix:
         jdk_version:
-         - 11
-         - 11.0.10
-         - 11.0.11-9
-         - 11.0.11
-         - 11.0.12
-         - 11.0.13
-         - 11.0.14
-         - 11.0.14.1
-         - 11.0.15
-         - 11.0.4
-         - 11.0.5
-         - 11.0.6
-         - 11.0.7
-         - 11.0.8
-         - 11.0.9
-         - 11.0.9.1
+        - 8
+        - 11
+        - 17
+        - 21
+        - 22
+        cc_tag:
+        - 2.5.138
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           platforms: linux/amd64
           build-args: |
             OPENJDK_VERSION=${{ matrix.jdk_version }}
-          tags: ${{ env.USER }}/${{ env.REPO }}:openjdk-${{ matrix.jdk_version }},${{ env.USER }}/${{ env.REPO }}:${{ matrix.jdk_version }}
+            CC_TAG=${{ matrix.cc_tag }}
+          tags: |
+            ${{ env.USER }}/${{ env.REPO }}:jdk${{ matrix.jdk_version }}-cc${{ matrix.cc_tag }}
 
       - name: Update Docker registry description
-        uses: peter-evans/dockerhub-description@v3
+        uses: peter-evans/dockerhub-description@v4
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
