--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,3 +1,5 @@
+name: Create default release
+
 env:
   USER: devopsiaci
   REPO: cruise-control
@@ -6,6 +8,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - .lastbuild
   workflow_dispatch:
 
 jobs:
@@ -17,11 +21,15 @@ jobs:
         jdk_version:
         - 11
         - 17
-        cc_tag:
-        - 2.5.138
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Read .lastbuild file
+        id: current_tag
+        run: |
+          current_tag=$(grep lastTag .lastbuild | cut -d '=' -f 2)
+          echo "current_tag=$current_tag" >> $GITHUB_OUTPUT
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -37,9 +45,9 @@ jobs:
           platforms: linux/amd64
           build-args: |
             OPENJDK_VERSION=${{ matrix.jdk_version }}
-            CC_TAG=${{ matrix.cc_tag }}
+            CC_TAG=${{ steps.current_tag.outputs.current_tag }}
           tags: |
-            ${{ env.USER }}/${{ env.REPO }}:jdk${{ matrix.jdk_version }}-cc${{ matrix.cc_tag }}
+            ${{ env.USER }}/${{ env.REPO }}:jdk${{ matrix.jdk_version }}-cc${{ steps.current_tag.outputs.current_tag }}
 
       - name: Update Docker registry description
         uses: peter-evans/dockerhub-description@v4
