--- a/.github/workflows/check_changes.yaml
+++ b/.github/workflows/check_changes.yaml
@@ -2,7 +2,7 @@ name: Check linkedin/cruise-control updates
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
