--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,12 +7,12 @@ env:
   GHCR_REPO: ${{ github.repository }}
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
     paths:
-      - .lastbuild
-  workflow_dispatch:
+      - Dockerfile
 
 jobs:
   release:
@@ -20,9 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        jdk_version:
-        - 11
-        - 17
+        jdk_version: [11, 17]
 
     permissions:
       contents: write
@@ -36,11 +34,39 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Read .lastbuild file
+      - name: Read tags from Dockerfile
         id: current_tag
         run: |
-          current_tag=$(grep lastTag .lastbuild | cut -d '=' -f 2)
-          echo "current_tag=$current_tag" >> $GITHUB_OUTPUT
+          # cc_tag
+          cc_current_tag=$(grep "ARG CC_TAG" Dockerfile | cut -d '=' -f 2)
+          echo "cc_current_tag=$cc_current_tag" >> $GITHUB_OUTPUT
+
+          # cc_ui_tag
+          cc_current_tag=$(grep "ARG CC_TAG_UI" Dockerfile | cut -d '=' -f 2)
+          echo "cc_ui_current_tag=$cc_ui_current_tag" >> $GITHUB_OUTPUT
+
+          # iam_tag
+          iam_current_tag=$(grep "ARG AWS_MSK_IAM_AUTH_VERSION" Dockerfile | cut -d '=' -f 2)
+          echo "iam_current_tag=$iam_current_tag" >> $GITHUB_OUTPUT
+
+          # complete tag
+          echo "complete_tag=jdk${{ matrix.jdk_version }}-cc$cc_current_tag-iam$iam_current_tag" >> $GITHUB_OUTPUT
+
+      - name: "Set Docker metadata"
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ${{ env.DOCKERHUB_USER }}/${{ env.DOCKERHUB_REPO }}
+            ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_REPO }}
+          labels: |
+            org.opencontainers.image.maintainer=ialejandro
+            org.opencontainers.image.title=Cruise Control
+            org.opencontainers.image.description=Cruise Control for Apache Kafka
+            org.opencontainers.image.vendor=DevOps IA
+          tags: |
+            type=raw,value=${{ steps.current_tag.outputs.complete_tag }}
+            type=sha,enable=false
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -48,9 +74,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      ##############
-      # DOCKERHUB
-      ##############
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: "[DOCKERHUB] Log in to Docker Hub"
         uses: docker/login-action@v3
@@ -58,22 +88,31 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: "[DOCKERHUB] Build and push Docker image"
+      - name: "[GHCR] Log in to the Container registry"
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.GHCR_REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: "Build and push Docker image"
         uses: docker/build-push-action@v6
         with:
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
           context: .
-          push: true
+          labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm64
-          build-args: |
-            OPENJDK_VERSION=${{ matrix.jdk_version }}
-            CC_TAG=${{ steps.current_tag.outputs.current_tag }}
-          tags: |
-            ${{ env.DOCKERHUB_USER }}/${{ env.DOCKERHUB_REPO }}:jdk${{ matrix.jdk_version }}-cc${{ steps.current_tag.outputs.current_tag }}
+          push: true
+          sbom: true
+          tags: ${{ steps.meta.outputs.tags }}
 
-      - name: "[DOCKERHUB] Update README.md default version"
+      - name: "Update README.md default version"
         run: |
           # replace default version
-          sed -i "s/\* Cruise Control: .*/* Cruise Control: \`${{ steps.current_tag.outputs.current_tag }}\`/" README.md
+          sed -i "s/\* Cruise Control: .*/* Cruise Control: \`${{ steps.current_tag.outputs.cc_current_tag }}\`/" README.md
+          sed -i "s/\* Cruise Control UI: .*/* Cruise Control UI: \`${{ steps.current_tag.outputs.cc_ui_current_tag }}\`/" README.md
+          sed -i "s/\* AWS IAM Auth: .*/* AWS IAM Auth: \`${{ steps.current_tag.outputs.iam_current_tag }}\`/" README.md
 
           # push changes
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
@@ -89,45 +128,17 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
           repository: ${{ env.DOCKERHUB_USER }}/${{ env.DOCKERHUB_REPO }}
 
-      ##############
-      # GHCR
-      ##############
-
-      - name: "[GHCR] Log in to the Container registry"
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.GHCR_REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: "[GHCR] Get metadata"
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_REPO }}
-          tags: |
-            type=sha,enable=false
-          labels: |
-            maintainer=ialejandro
-            org.opencontainers.image.title=cruise-control
-            org.opencontainers.image.description=Cruise Control for Apache Kafka
-
-      - name: "[GHCR] Build and push Docker image"
-        id: push
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          platforms: linux/amd64,linux/arm64
-          build-args: |
-            OPENJDK_VERSION=${{ matrix.jdk_version }}
-            CC_TAG=${{ steps.current_tag.outputs.current_tag }}
-          tags: |
-            ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_REPO }}:jdk${{ matrix.jdk_version }}-cc${{ steps.current_tag.outputs.current_tag }}
-
       - name: "[GHCR] Generate artifact"
         uses: actions/attest-build-provenance@v1
         with:
           subject-name: ${{ env.GHCR_REGISTRY }}/${{ env.GHCR_REPO }}
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
+
+      - # Temp fix
+        # https://github.com/docker/build-push-action/issues/252
+        # https://github.com/moby/buildkit/issues/1896
+        name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
