--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,10 @@ updates:
   labels:
   - enhancement
   - dependency-management
+  groups:
+    github-actions:
+      patterns:
+        - "*"
 - package-ecosystem: docker
   directory: "/"
   schedule:
@@ -16,3 +20,7 @@ updates:
   labels:
   - enhancement
   - dependency-management
+  groups:
+    docker:
+      patterns:
+        - "*"
